V1 Random neural network test de mutation car pas de progres